one null check, 2x run twice. 8 failing